# GardenOfDoomGGJ2023

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/animations/: apple_a_day.anim  bee.anim  bomb_plant.anim  bomb_weapon.anim  briar_plant.anim  character.anim  exp_orb_blue.anim  exp_orb_purple.anim  exp_orb_rainbow.anim  explosion.anim  fire_plant.anim  fireball_weapon.anim  firesword.anim  gas_aura_projectile.anim  hand_of_god.anim  lose.anim  main_menu.anim  orbiting_spike_projectile.anim  pea_shooter_projectile.anim  player.anim  player_idle.anim  player_run.anim  sword_plant.anim  sword_weapon.anim  tangleweed.anim  thorn_shield.anim  tumbleweed.anim  turtle.anim  win.anim  zombie_plant.anim
assets/prefebs/: test_character.scene
assets/scenes/: SpriteDemo.scene  SpriteDemo1.scene  engine_splash.scene  ggj_splash.scene  lose.scene  main.scene  main_menu.scene  win.scene
assets/shaders/: hdr.fs  lighting.fs  lighting.vs  shadow_mapping.fs  skybox.vs  sprite.fs  sprite.vs  text.fs  text.vs
assets/textures/palette/: palette.kra
assets/tiled/: testmap_v2.tmx
src/: App.cpp  App.hpp  main.cpp
src/ECS/: Decode.cpp  Decode.hpp
src/ECS/Components/: BoidComponent.hpp  BombComponent.hpp  Bullet.hpp  BulletComponent.hpp  DamageTextComponent.hpp  EnemyComponent.hpp  EnemyHealthComponent.hpp  HandOfGodComponent.hpp  PlantableGroundComponent.hpp  PlayerHealth.hpp  PlayerHealthComponent.hpp  SeedComponent.hpp  SmokeComponent.hpp
src/ECS/Systems/: BoidSystem.cpp  (+7 more)
src/Scenes/: LightingDemoScene.hpp  MainScene.hpp  ShadowDemoScene.hpp  SpriteDemoScene.hpp
(+31 files in other folders)
